# BasicPythonBot

./: keep_alive.py  main.py  pyproject.toml  replit.nix  requirements.txt
