[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
datetime3 = "3.8.0"
"discord.py" = "2.2.2"
discord = "^2.2.2"
aiohttp = "3.8.4"
openai = "^0.27.2"
discord-py-slash-command = "4.2.1"
nltk = "3.8.1"
jikanpy = "^4.3.2"
qrcode = "^7.4.2"
lyricsgenius = "^3.0.1"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"